--- a/css/index.css
+++ b/css/index.css
@@ -3,13 +3,11 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("../img/legno.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("../img/sfondo-background.png");
 }
 
 header {
-  background-image: url("../img/foresta.jpg");
+  background-image: url("../img/sfondo-logo.jpg");
   background-position: center;
   background-size: cover;
   border: 10px solid white;
@@ -23,46 +21,47 @@ header {
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
-h1 {
-  border: 10px solid white;
-  font-family: 'Raleway', sans-serif;
-  font-size: 100px;
-  padding: 0 10px;
-  display: inline-block;
+#logo {
+  height: 150px;
   position: absolute;
-  left: 50%;
   top: 50%;
+  left:50%;
   transform: translate(-50%, -50%);
 }
-h2 {
+#text-logo {
   width: 100%;
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat',Arial,Helvetica,sans-serif;
   position: absolute;
   left: 50%;
   bottom: 5%;
   transform: translate(-50%, -50%);
 }
 
-nav {
+#menu {
   height: 60px;
-  background: grey;
+  background: #504741;
   color: white;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat',Arial,Helvetica,sans-serif;
   margin: 0 10% 0;
   text-align: center;
   position: relative;
 }
-ul {
+#menu-container {
   width: 100%;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
-li {
+.menu-button {
   display: inline-block;
-  margin: 10px;
+  padding: 15px;
+  border: 2px outset #605751;
+}
+.menu-button:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 main {
